--- a/assets/dev/scss/editor/_responsive-bar.scss
+++ b/assets/dev/scss/editor/_responsive-bar.scss
@@ -273,7 +273,7 @@
 		}
 
 		&.e-logo .elementor-panel-footer-sub-menu {
-			margin-top: 2px;
+			margin-top: 0;
 			inset-inline-start: 8px !important;
 		}
 
@@ -293,7 +293,7 @@
 		background-color: #FFF;
 		color: #6D7882;
 		border-radius: 6px;
-		margin-top: 8px;
+		margin-top: 4px;
 		overflow: hidden;
 		box-shadow: 0px 3px 16px rgba(35, 38, 42, 0.2);
 
