--- a/assets/dev/scss/editor/panel/_header.scss
+++ b/assets/dev/scss/editor/panel/_header.scss
@@ -9,10 +9,6 @@
 	// background-color: $editor-accent;
 	// color: #fff;
 
-	body:not(.elementor-panel-docked) & {
-		border-radius: 5px 5px 0 0;
-	}
-
 	> * {
 		display: table-cell;
 		vertical-align: middle;
@@ -41,6 +37,10 @@
 	}
 }
 
+#elementor-panel-header-wrapper {
+	border-bottom: 1px solid #F1F3F5;
+}
+
 #elementor-panel-header-title {
 	font-size: 12px;
 	cursor: move;
@@ -48,7 +48,6 @@
 	font-weight: 700;
 	background: #FFF;
 	padding: 8px 12px;
-	border-bottom: 1px solid #F1F3F5;
 
 	img {
 		width: 90px;
