--- a/assets/dev/scss/editor/panel/controls/_switcher.scss
+++ b/assets/dev/scss/editor/panel/controls/_switcher.scss
@@ -47,6 +47,6 @@
 	}
 
 	.elementor-switch-input:checked ~ .elementor-switch-label {
-		background: #33A343;
+		background: #33A343 !important;
 	}
 }
