--- a/modules/tabs-v2/assets/scss/frontend.scss
+++ b/modules/tabs-v2/assets/scss/frontend.scss
@@ -3,6 +3,8 @@
 //
 
 .elementor-widget-tabs-v2 {
+	--tabs-v2-default-padding: 15px;
+
 	--tabs-v2-display: flex;
 	--tabs-v2-direction: column;
 
@@ -20,14 +22,21 @@
 
 	--tabs-v2-title-alignment: center;
 	--tabs-v2-title-grow: 1;
+	--tabs-v2-title-gap: 10px;
+	--tabs-v2-title-padding-top: var( --tabs-v2-default-padding );
+	--tabs-v2-title-padding-right: var( --tabs-v2-default-padding );
+	--tabs-v2-title-padding-bottom: var( --tabs-v2-default-padding );
+	--tabs-v2-title-padding-left: var( --tabs-v2-default-padding );
 
 	/* TODO Find better solution for all global defaults. */
-	--tabs-v2-title-color: var(--e-global-color-primary);
-	--tabs-v2-title-active-color: var(--e-global-color-accent);
+	// --tabs-v2-title-color: var( --e-global-color-secondary, #54595F );
+	--tabs-v2-title-color: var( --e-global-color-secondary, #54595F );
+	--tabs-v2-title-active-color: #{$white};
+	--tabs-v2-title-background-color: #{$editor-background-light};
 
-	--tabs-v2-title-typography-font-family: var(--e-global-typography-primary-font-family);
+	--tabs-v2-title-typography-font-family: var( --e-global-typography-accent-font-family, --e-global-typography-primary-font-family ), Sans-serif;
 	--tabs-v2-title-typography-font-size: initial;
-	--tabs-v2-title-typography-font-weight: var(--e-global-typography-primary-font-weight);
+	--tabs-v2-title-typography-font-weight: var( --e-global-typography-primary-font-weight );
 	--tabs-v2-title-typography-text-transform: initial;
 	--tabs-v2-title-typography-font-style: initial;
 	--tabs-v2-title-typography-text-decoration: initial;
@@ -37,23 +46,27 @@
 
 	--tabs-v2-title-shadow: none;
 
+	--tabs-v2-icon-color: #{$white};
+	--tabs-v2-icon-active-color: var( --e-global-color-secondary, #54595F );
+
 	max-width: 100%; /* Fix issue with new created tabs-v2 inside tabs-v2 with overflow */
 
 	.elementor-tabs {
-		display: var(--tabs-v2-display);
-		flex-direction: var(--tabs-v2-direction);
+		display: var( --tabs-v2-display );
+		flex-direction: var( --tabs-v2-direction );
 		text-align: $start;
 
 		&-wrapper {
-			display: var(--tabs-v2-tabs-wrapper-display);
-			flex-basis: var(--tabs-v2-tabs-wrapper-width);
-			flex-direction: var(--tabs-v2-tabs-wrapper-direction);
-			justify-content: var(--tabs-v2-tabs-wrapper-justify-content);
+			display: var( --tabs-v2-tabs-wrapper-display );
+			flex-basis: var( --tabs-v2-tabs-wrapper-width );
+			flex-direction: var( --tabs-v2-tabs-wrapper-direction );
+			justify-content: var( --tabs-v2-tabs-wrapper-justify-content );
+			gap: var( --tabs-v2-title-gap );
 			overflow: hidden;
 		}
 	
 		&-content-wrapper {
-			background-color: var(--tabs-v2-background-color);
+			background-color: var( --tabs-v2-background-color );
 			flex-grow: 1;
 			height: var( --tabs-v2-content-height );
 			overflow-y: auto;
@@ -63,33 +76,30 @@
 	.elementor-tab {
 
 		&-title {
-			color: var(--tabs-v2-title-color);
+			color: var( --tabs-v2-title-color );
+			background-color: var( --tabs-v2-title-background-color );
 			cursor: pointer;
-			outline: var(--focus-outline, none);
-	
-			font-family: var(--tabs-v2-title-typography-font-family);
-			font-size: var(--tabs-v2-title-typography-font-size);
-			font-weight: var(--tabs-v2-title-typography-font-weight);
-			text-transform: var(--tabs-v2-title-typography-text-transform);
-			font-style: var(--tabs-v2-title-typography-font-style);
-			text-decoration: var(--tabs-v2-title-typography-text-decoration);
-			line-height: var(--tabs-v2-title-typography-line-height);
-			letter-spacing: var(--tabs-v2-title-typography-letter-spacing);
-			word-spacing: var(--tabs-v2-title-typography-word-spacing);
-			text-shadow: var(--tabs-v2-title-shadow);
-			text-align: var(--tabs-v2-title-alignment);
-			flex-grow: var(--tabs-v2-title-grow);
-
-			& a {
-				color: var(--tabs-v2-title-color);
-			}
+			outline: var( --focus-outline, none );
+			padding-top: var( --tabs-v2-title-padding-top );
+			padding-right: var( --tabs-v2-title-padding-right );
+			padding-bottom: var( --tabs-v2-title-padding-bottom ); 
+			padding-left: var( --tabs-v2-title-padding-left );
+			font-family: var( --tabs-v2-title-typography-font-family );
+			font-size: var( --tabs-v2-title-typography-font-size );
+			font-weight: var( --tabs-v2-title-typography-font-weight );
+			text-transform: var( --tabs-v2-title-typography-text-transform );
+			font-style: var( --tabs-v2-title-typography-font-style );
+			text-decoration: var( --tabs-v2-title-typography-text-decoration );
+			line-height: var( --tabs-v2-title-typography-line-height );
+			letter-spacing: var( --tabs-v2-title-typography-letter-spacing );
+			word-spacing: var( --tabs-v2-title-typography-word-spacing );
+			text-shadow: var( --tabs-v2-title-shadow );
+			text-align: var( --tabs-v2-title-alignment );
+			flex-grow: var( --tabs-v2-title-grow );
 
 			&.elementor-active {
-				color: var(--tabs-v2-title-active-color);
-
-				& a {
-					color: var(--tabs-v2-title-active-color);
-				}
+				color: var( --tabs-v2-title-active-color );
+				background-color: var( --tabs-v2-title-active-background-color, var( --e-global-color-accent, #61CE70 ) );
 			}
 		}
 	}
@@ -99,81 +109,8 @@
 	.elementor-tab-title:after,
 	.e-container,
 	.elementor-tabs-content-wrapper {
-		border: 1px none var(--tabs-v2-border-color);
-		border-width: var(--tabs-v2-border-width);
-	}
-
-	.elementor-tab-desktop-title {
-		position: relative;
-		padding: 20px 25px;
-		font-weight: bold;
-		line-height: 1;
-		border: solid transparent;
-
-		&.elementor-active {
-			border-color: var(--tabs-v2-border-color);
-
-			&:before,
-			&:after {
-				display: block;
-				content: '';
-				position: absolute;
-			}
-		}
-
-		&:focus-visible	 {
-			border: 1px solid $black;
-		}
-
-		&.elementor-active {
-			background-color: var(--tabs-v2-background-color);
-
-			/* TODO check in initial design task */
-			// code commented out for now
-			// will be implemented in initial design styling
-
-			// @include border-end-property(style, none);
-
-			// &:before,
-			// &:after {
-			// 	height: 999em;
-			// 	width: 0;
-			// 	@include end(0);
-			// 	@include border-end-property(style, solid);
-			// }
-
-			// &:before {
-			// 	top: 0;
-			// 	transform: translateY(-100%);
-			// }
-
-			// &:after {
-			// 	top: 100%;
-			// }
-
-			// border-bottom-style: none;
-
-			// &:before,
-			// &:after {
-			// 	bottom: 0;
-			// 	height: 0;
-			// 	width: 999em;
-			// 	border-bottom-style: solid;
-			// }
-
-			// &:before {
-			// 	right: 100%;
-			// }
-
-			// &:after {
-			// 	left: 100%;
-			// }
-		}
-	}
-
-	.elementor-tab-mobile-title {
-		padding: 10px 10px;
-		cursor: pointer;
+		border: 1px none var( --tabs-v2-border-color );
+		border-width: var( --tabs-v2-border-width );
 	}
 
 	.e-container {
@@ -190,24 +127,14 @@
 }
 
 // Responsive mode
-// This code needs to update in the Responsive Tabs section
-
+// This code needs to be updated in the Responsive Tabs section task
 @media (max-width: $screen-mobile-max) {
 	.elementor-tabs {
-		.elementor-tab-title,
-		.e-container {
-			border-style: solid;
-			border-bottom-style: none;
-		}
 
 		.elementor-tabs-wrapper {
 			display: none;
 		}
-
-		.elementor-tabs-content-wrapper {
-			border-bottom-style: solid;
-		}
-
+		
 		.e-container {
 			padding: 10px;
 		}
@@ -217,16 +144,8 @@
 @media (min-width: $screen-mobile-next) {
 	.elementor-widget-tabs-v2 {
 
-		/* TODO check in initial design task */
-		// commented out for now
-
-		// 			> .elementor-tabs-content-wrapper {
-		// 				flex-grow: 1;
-		// 				border-style: solid;
-		// 				@include border-start-property(style, none);
-		// 			}
-
 		.elementor-tabs {
+			
 			.elementor-tab-mobile-title {
 				display: none;
 			}
