--- a/assets/dev/scss/admin/admin.scss
+++ b/assets/dev/scss/admin/admin.scss
@@ -28,3 +28,8 @@
 @import "beta-tester";
 @import "experiments";
 @import "landing-pages";
+
+// TODO - Remove - Hide nested elements experiment.
+.elementor_experiment-nested-elements {
+	display: none;
+}
