--- a/modules/tabs-v2/assets/scss/frontend.scss
+++ b/modules/tabs-v2/assets/scss/frontend.scss
@@ -47,8 +47,8 @@
 	--tabs-v2-title-typography-word-spacing: initial;
 	--tabs-v2-title-shadow: none;
 
-	--tabs-v2-icon-color: #{$white};
-	--tabs-v2-icon-active-color: var( --e-global-color-secondary, #54595F );
+	--tabs-v2-icon-color: var( --e-global-color-secondary, #54595F );
+	--tabs-v2-icon-active-color: #{$white};
 
 	max-width: 100%; /* Fix issue with new created tabs-v2 inside tabs-v2 with overflow */
 
