--- a/modules/tabs-v2/assets/scss/frontend.scss
+++ b/modules/tabs-v2/assets/scss/frontend.scss
@@ -2,6 +2,8 @@
 // Tabs v2
 //
 .elementor-widget-tabs-v2 {
+	--tabs-v2-color-accent-fallback: #61CE70;
+	--tabs-v2-color-secondary-fallback: #54595F;
 	--tabs-v2-default-padding: 15px;
 
 	--tabs-v2-display: flex;
@@ -22,10 +24,10 @@
 	--tabs-v2-border-color: #{$gray-light};
 	--tabs-v2-background-color: transparent;
 
-	--tabs-v2-title-color: var( --e-global-color-secondary, #54595F );
+	--tabs-v2-title-color: var( --e-global-color-secondary, var( --tabs-v2-color-secondary-fallback ) );
 	--tabs-v2-title-background-color: #{$editor-background-light};
 	--tabs-v2-title-active-color: #{$white};
-	--tabs-v2-title-active-background-color: var( --e-global-color-accent, #61CE70 );
+	--tabs-v2-title-active-background-color: var( --e-global-color-accent, var( --tabs-v2-color-accent-fallback ) );
 
 	--tabs-v2-title-alignment: center;
 	--tabs-v2-title-grow: 1;
@@ -46,7 +48,7 @@
 	--tabs-v2-title-typography-word-spacing: initial;
 	--tabs-v2-title-shadow: none;
 
-	--tabs-v2-icon-color: var( --e-global-color-secondary, #54595F );
+	--tabs-v2-icon-color: var( --e-global-color-secondary, var( --tabs-v2-color-secondary-fallback ) );
 	--tabs-v2-icon-active-color: #{$white};
 
 	max-width: 100%; /* Fix issue with new created tabs-v2 inside tabs-v2 with overflow */
