--- a/assets/dev/scss/editor/panel/_panel.scss
+++ b/assets/dev/scss/editor/panel/_panel.scss
@@ -52,6 +52,7 @@
 	&.e-panel-docked {
 		&#elementor-panel {
 			width: var( --e-editor-panel-width--docked );
+			z-index: 900;
 		}
 
 		&#elementor-inspector {
