--- a/assets/dev/scss/editor/preview/preview.scss
+++ b/assets/dev/scss/editor/preview/preview.scss
@@ -1004,7 +1004,7 @@ html.elementor-html {
 	}
 
 	> .elementor-widget-container, > .elementor-widget-wrap {
-		filter: alpha(0.4) saturate(0);
+		filter: opacity(0.4) saturate(0);
 	}
 
 	//Compatibility for hidden element by the navigator
