--- a/modules/tabs-v2/assets/scss/frontend.scss
+++ b/modules/tabs-v2/assets/scss/frontend.scss
@@ -171,7 +171,13 @@
 		.elementor-tabs-wrapper {
 			display: none;
 		}
-	}
+
+		.elementor-tabs-content-wrapper,
+		.elementor-tab-title,
+		.elementor-tab-content {
+			border: none;
+		}
+	}	
 }
 
 @media (min-width: $screen-mobile-next) {
