border hide mobile

--- a/modules/tabs-v2/assets/scss/frontend.scss
+++ b/modules/tabs-v2/assets/scss/frontend.scss
@@ -200,6 +200,12 @@
 		.elementor-tabs-wrapper {
 			display: none;
 		}
+
+		.elementor-tabs-content-wrapper,
+		.elementor-tab-title,
+		.elementor-tab-content {
+			border: none;
+		}
 	}
 }
 
