--- a/modules/tabs-v2/assets/scss/frontend.scss
+++ b/modules/tabs-v2/assets/scss/frontend.scss
@@ -24,8 +24,8 @@
 	--tabs-v2-border-color: initial; 
 
 	--tabs-v2-title-color: var( --e-global-color-secondary, var( --tabs-v2-color-secondary-fallback ) );
-	--tabs-v2-title-background-color: $editor-background-light;
-	--tabs-v2-title-color-active: $white;
+	--tabs-v2-title-background-color: #{$editor-background-light};
+	--tabs-v2-title-color-active: #{$white};
 	--tabs-v2-title-background-color-active: var( --e-global-color-accent, var( --tabs-v2-color-accent-fallback ) );
 
 	--tabs-v2-title-alignment: center;
@@ -54,10 +54,10 @@
 	--tabs-v2-title-typography-word-spacing: initial;
 
 	--tabs-v2-icon-color: var( --e-global-color-secondary, var( --tabs-v2-color-secondary-fallback ) );
-	--tabs-v2-icon-color-active: $white;
+	--tabs-v2-icon-color-active: #{$white};
 
 	--tabs-v2-icon-color: var( --e-global-color-secondary, var( --tabs-v2-color-secondary-fallback ) );
-	--tabs-v2-icon-active-color: $white;
+	--tabs-v2-icon-active-color: #{$white};
 
 	max-width: 100%; /* Fix issue with new created tabs-v2 inside tabs-v2 with overflow */
 
